--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,5 +1,90 @@
-$bg-color:#ffff;
+@font-face {
+    font-family: Roboto;
+    src: url(/fonts/OpenSans-Bold.ttf);
+    font-weight: bold;
+    font-style: normal;
+}
 
-body {
- background: $bg-color;
+@font-face {
+    font-family: Inter-UI;
+    src: url(/fonts/Inter-Regular.ttf) format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Inter-UI;
+    src: url(/fonts/Inter-SemiBold.ttf) format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Inter-UI;
+    src: url(/fonts/Inter-Bold.ttf) format("truetype");
+    font-weight: 700;
+    font-style: normal;
+}
+    
+header {
+    height: 54px;
+    padding-left: 10%;
+    padding-right: 10%;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10000;
+    font-family: Inter-UI;
+}
+
+li {
+    display: inline-block;
+    padding: 25px;
+}
+
+p {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
+
+#logo {
+    display: flex;
+    align-items: flex-end;
+    padding-left: 8px;
+}
+   
+#logo-icon {
+    width: 18px;
+    height: 18px;
+    float: left;
+    border: 6px solid #0078FF;
+    border-radius: 50%;
+    z-index: 100;
+    margin: 0;
+}
+
+#logo-name {
+    font-family: Roboto, 'Open Sans', normal;
+    padding-left: 5px;
+    bottom: 0;
+    width:71px;
+    float: left;
+    font-size: 10px;
+    z-index: 100;
+}
+
+.menu {
+    font-family: Inter-UI;
+    font-weight: 600;
+    font-size: 9px;
+}
+
+nav {
+    z-index: 100;
+}
+
+a {
+    font-family: Inter-UI,'Open Sans', normal;
+    color: white;
+    text-decoration: none;
 }
