--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -96,12 +96,12 @@
 
 .model-card {
     padding-top:80px;
-    width: 740px;
+    width: calc(100%/2 - 20px);
     height: 520px;
 }
 
 .card-image {
-    width: 728px;
+    width: 100%;
     height: 320px;
 }
 
@@ -123,12 +123,14 @@
 
 .button {
     text-decoration: none;    
-    width: 220px;
-    height: 48px;
     background:#2A4BFF;
     border-radius: 8px;
     padding: 14px 65px;
 }
+.button:active {
+    text-decoration: none;
+    background: rgb(92, 115, 245);
+  }
 
 .consulting {
     padding-top: 200px;
@@ -148,12 +150,12 @@
 
 .consult-card {
     padding-top:80px;
-    width: 472px;
+    width: calc( 100%/3 - 20px);
     height: 520px;
 }
 
 .consult-card-image {
-    width: 472px;
+    width: 100%;
     height: 320px;
 }
 
@@ -198,7 +200,7 @@
     justify-content: space-between;
 }
 
-.what-we-do-banner {
+.about-banner {
     background: url(/img/what-we-do.png);
     width: 984px;
     height: 738px;
@@ -212,4 +214,33 @@
 #about-text {
     width: 600px;
     height: 168px;
+}
+
+.articles {
+    width: 1496px;
+    height: 513px;
+    padding-top: 200px;
+    padding-left: 212px;
+    padding-right: 212px;
+    padding-bottom: 200px;
+}
+
+.articles-block {
+    width: 1496px;
+    height: 385px;
+    padding-top: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.article-card {
+    width: calc( 100%/4 - 20px);
+    height: 385px;
+}
+
+.next-button {
+    width: calc( 100% - 10px);
+    height: 201px;
+    background: url(/img/group.png);
 }
