--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,12 +1,13 @@
+@import "_variables.scss";
 
-.top-banner-block {
+.top-banner-bg {
     background: url(/img/top-banner.png);
     position: absolute;
     width: 1183px;
     height: 1141px;
     float: right;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     z-index: 1;
     background-size: contain;
 }
@@ -20,20 +21,21 @@
     top: 360px;
     z-index: 1;
 }
-#title-big {
-    font-family: Inter-UI;
+.title-big {
+    font-family: Inter-UI, sans-serif;
     font-weight: 700;
+    font-size: 80px;
 }
-#title-description {
-    font-family: Inter-UI;
+.title-description {
+    font-family: Inter-UI, sans-serif;
     font-weight: 300;
     font-style: normal;
     width: 521px;
     height: 64px;
-    font-size: 24px !important;
-    color: #6E6F7A;
+    font-size: 24px;
+    color: $text-gray;
     padding-block-start: 32px;
-    margin: 0px;
+    margin: 0;
 }
 
 .top-banner {
@@ -54,14 +56,15 @@
     padding-right: 212px;
 }
 
-#title {
-    font-family: Inter-UI;
+.title {
+    font-family: Inter-UI, sans-serif;
     font-weight: 700;
     font-size: 40px;
+    padding: 0;
 }
 
-#slider-text {
-    font-family: Inter-UI;
+.slider-text {
+    font-family: Inter-UI, sans-serif;
     font-weight: 400;
     font-style: italic;
     font-size: 24px;
@@ -70,11 +73,11 @@
     height: 96px;
 }
 
-#slider-author {
+.slider-author {
     padding-top: 32px;
-    font-family: Inter-UI;
+    font-family: Inter-UI, sans-serif;
     font-weight: 400;
-    color:#6E6F7A;
+    color: $text-gray;
     font-size: 16px;
 }
 
@@ -87,8 +90,6 @@
 }
 
 .models-block {
-    width: 1496px;
-    height: 1144px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -97,40 +98,35 @@
 .model-card {
     padding-top:80px;
     width: calc(100%/2 - 20px);
-    height: 520px;
-}
-
-.card-image {
-    width: 100%;
-    height: 320px;
 }
 
 .subtitle {
     padding-top: 32px;
-    font-family: Inter-UI;
+    font-family: Inter-UI, sans-serif;
     font-weight: 700;
     font-size: 24px
 }
 
 .text {
     padding-top: 32px;
-    font-family: Inter-UI;
+    font-family: Inter-UI, sans-serif;
     font-weight: 400;
-    color:#6E6F7A;
+    color: $text-gray;
     font-size: 16px;
     padding-bottom: 24px;
 }
 
 .button {
     text-decoration: none;    
-    background:#2A4BFF;
+    background: $button-blue;
     border-radius: 8px;
     padding: 14px 65px;
-}
-.button:active {
+    color: #FFFFFF;
+&:active {
     text-decoration: none;
-    background: rgb(92, 115, 245);
+    background: $button-active;
   }
+}
 
 .consulting {
     padding-top: 200px;
@@ -141,22 +137,15 @@
 }
 
 .consulting-block {
-    width: 1496px;
-    height: 520px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .consult-card {
-    padding-top:80px;
+    padding-top: 80px;
     width: calc( 100%/3 - 20px);
     height: 520px;
-}
-
-.consult-card-image {
-    width: 100%;
-    height: 320px;
 }
 
 .line {
@@ -164,7 +153,7 @@
     width: 1496px;
     height: 1px;
     opacity: 0.4;
-    background:  #979CAA;
+    background:  $line-gray;
 }
 
 .additional-block {
@@ -177,18 +166,9 @@
     padding-top: 48px;
 }
 
-#addtitional-text {
+.addtitional-text {
     width: 858px;
     height: 48px;
-}
-
-#addtitonal-button {
-    text-decoration: none;    
-    width: 220px;
-    height: 48px;
-    background:#2A4BFF;
-    border-radius: 8px;
-    padding: 14px 65px;
 }
 
 .about {
@@ -207,11 +187,11 @@
     float: left;
 }
 
-#about-information {
+.about-information {
     padding-top: 189px;
 }
 
-#about-text {
+.about-text {
     width: 600px;
     height: 168px;
 }
@@ -226,8 +206,6 @@
 }
 
 .articles-block {
-    width: 1496px;
-    height: 385px;
     padding-top: 80px;
     display: flex;
     flex-wrap: wrap;
