--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,4 @@ $text-gray:       #6E6F7A;
 $button-blue:     #2A4BFF;
 $button-active:   #5c73f5;
 $line-gray:       #979CAA;
+$blog-gray:       #E5E5E5;
