--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -61,6 +61,9 @@
     font-weight: 700;
     font-size: 40px;
     padding: 0;
+    width: max-content;
+    margin-right: 0;
+    display:inline-block;
 }
 
 .slider-text {
