Add responsive design  to Blog

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
-$logo-blue:       #0078FF;
-$logo-text:       #0E0F21;
-$footer-bg:       #0E0F21;
-$text-gray:       #6E6F7A;
-$button-blue:     #2A4BFF;
-$button-active:   #5c73f5;
-$line-gray:       #979CAA;
-$blog-gray:       #E5E5E5;
+$logo-blue: #0078ff;
+$logo-text: #0e0f21;
+$footer-bg: #0e0f21;
+$text-gray: #6e6f7a;
+$button-blue: #2a4bff;
+$button-active: #5c73f5;
+$line-gray: #979caa;
+$blog-gray: #e5e5e5;
