Sfec-2. Add store and checkout pages.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,7 @@ $button-blue: #2a4bff;
 $button-active: #5c73f5;
 $line-gray: #979caa;
 $blog-gray: #e5e5e5;
+$orange: #ff5500;
+$orange-active: #ff550094;
+$green: #7bc178;
+$green-active: #7bc178a9;
