--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,6 +60,8 @@ header {
   max-width: 1544px;
   padding-left: 24px;
   padding-right: 24px;
+  box-sizing: border-box;
+  outline: none;
 }
 
 li {
@@ -120,10 +122,8 @@ nav {
 footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  // padding-left: 212px;
-  // padding-right: 212px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   background-color: $footer-bg;
