--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -7,9 +7,10 @@
   border-radius: 8px;
   box-sizing: border-box;
   outline: none;
-  padding: 16px;
-  color: #ffffff;
+  padding: 10px;
+  color: #ffffff !important;
   text-transform: uppercase;
+  font-size: 12px;
   margin-top: 8px;
   margin-bottom: 8px;
   margin-right: 8px;
@@ -17,6 +18,17 @@
     text-decoration: none;
     background: $orange-active;
   }
+  &:hover {
+    opacity: 0.9;
+    transition-duration: 0.5s;
+  }
+}
+
+.checkout-image {
+  width: 100%;
+  height: 120px;
+  padding-top: 24px;
+  object-fit: scale-down;
 }
 
 .pay-button {
@@ -35,6 +47,10 @@
   &:active {
     text-decoration: none;
     background: $green-active;
+  }
+  &:hover {
+    opacity: 0.9;
+    transition-duration: 0.5s;
   }
 }
 
